homepage design change

--- a/index.html
+++ b/index.html
@@ -18,38 +18,42 @@
 	
 
 </head>
-<body>
+<body style = "height: 100%">
 
-<header>
-		<div class="header-content" style="background-color: #ff4d4d; height: 20%">
-			<div class="header-content-inner" style="color: #ffffff">
-				<h1>TimePlates</h1>
-				<hr>
-			</div>
-		</div>
-	</header>
+<div class = "logo" style = "margin-top: 0px,margin-bottom: 0px">
+    <h3 style = "margin-top :10px; margin-left: 10px"><img src = "../images/logo.png" ALIGN = MIDDLE height = "60px" width = "60px" >TimePlates</h3>
+    
 
-	<div id="main" class="row" style="height:70%">
-	<div style="padding-top:150px">
-		<h1 style="font-size:63px">Welcome to TimePlates!</h1>
-		<hr>
-		<h2>Now plan your trips on your terms</h2>
 
 </div>
-	</div>
 
 
-	<div id="buttons" class="row" style="height:40%">
-	<div class="col-md-4"></div>
-	<div class="col-md-5">
-		<a style="top: 55px; position: relative; background-image:linear-gradient(to bottom,#996633 0,#996633 100%)" href="#about"
-			class="btn btn-primary btn-xl page-scroll" data-toggle="modal" data-target="#myModal">Plan a new Trip</a>
-			<a style="top: 55px; position: relative; background-image:linear-gradient(to bottom,#996633 0,#996633 100%)" href="#about"
-			class="btn btn-primary btn-xl page-scroll">View Planned Trips</a>
-			<button type="button" style="top: 55px; position: relative; background-image:linear-gradient(to bottom,#996633 0,#996633 100%)" 
-			class="btn btn-primary btn-xl page-scroll">Learn more about TimePlates</button></div>
-	<div class="col-md-3"></div>
-	</div>
+
+<div id="main" class="row" style="height:90%">
+	<div style="padding-top:190px">
+		<h1 style="font-size:63px">Welcome to TimePlates!</h1>
+		<h2 style = "font-size:20px">Now plan your trips on your terms</h2>
+  </div>
+  <div style="position: absolute; 
+                bottom: 0; 
+                width: 100%; 
+                height: 50px; ">
+      <div id="buttons" class="row" style="height:10%">
+      <div class="col-md-4"></div>
+      <div class="col-md-5">
+        <a style="top: 0px; position: relative; background-image:linear-gradient(to bottom,#996633 0,#996633 100%)" href="#about"
+          class="btn btn-primary btn-xl page-scroll" data-toggle="modal" data-target="#myModal">Plan a new Trip</a>
+          <a style="top: 0px; position: relative; background-image:linear-gradient(to bottom,#996633 0,#996633 100%)" href="#about"
+          class="btn btn-primary btn-xl page-scroll">View Planned Trips</a>
+          <button type="button" style="top: 0px; position: relative; background-image:linear-gradient(to bottom,#996633 0,#996633 100%)" 
+          class="btn btn-primary btn-xl page-scroll">Learn more about TimePlates</button></div> 
+        <div class="col-md-3"></div>
+  </div>
+  </div>
+</div>
+
+
+	
 	
 	  <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
