--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body style = "height: 100%">
 
 <div class = "logo" style = "margin-top: 0px,margin-bottom: 0px">
-    <h3 style = "margin-top :10px; margin-left: 10px"><img src = "../images/logo.png" ALIGN = MIDDLE height = "60px" width = "60px" >TimePlates</h3>
+    <h3 style = "margin-top :10px; margin-left: 10px"><img src = "images/logo.png" ALIGN = MIDDLE height = "60px" width = "60px" >TimePlates</h3>
     
 
 
