--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			var date2 = new Date(endDate);
 			var timeDiff = Math.abs(date2.getTime() - date1.getTime());
 			var days = Math.ceil(timeDiff / (1000 * 3600 * 24)); 
+			 days = days +1;
 			
 		}
 		if(typeof(Storage) !== "undefined") {
